--- a/main.css
+++ b/main.css
@@ -9,3 +9,43 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+
+
+
+#red {
+  /* this selects any elements with the red id */
+  border-top-color: #f00;
+}
+
+#orange {
+  /*this selects any elements with the orange id */
+border-top-color: orange;
+
+}
+#yellow {
+ /*this selects any elements with the yellow id */
+ border-top-color: yellow;
+}
+#green{
+  /*this selects any elements with the green id */
+  border-top-color: green;
+}
+#blue {
+    /*this selects any elements with the blue id */
+    border-top-color: blue;
+
+}
+#indigo{
+     /*this selects any elements with the indigo id */
+ border-top-color: indigo;
+}
+#violet {
+       /*this selects any elements with the violet id */
+border-top-color: violet;
+}
+ 
+  
+
+
+
